# url_short_rs

./: .gitignore  Cargo.toml  Readme.md  db
src/: main.rs
src/database/: base_ops.rs  mod.rs
src/http/: http_structs.rs  mod.rs
src/structs/: structs.rs
