[package]
name = "url_short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_serv = { git = "https://github.com/GamingGuy003/http_serv.git", branch = "main", features = ["log", "num_cpus"]}
log = "0.4.20"
pretty_env_logger = "0.5.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.23.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
